Ended index html page designI

--- a/UserInterface/index.html
+++ b/UserInterface/index.html
@@ -1,28 +1,97 @@
 <!DOCTYPE html>
 <html lang="it">
-    <head>
-        <!-- Meta tags -->
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-        <title>EmmeDomotica</title>
+<head>
+    <!-- Meta tags -->
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <title>EmmeDomotica</title>
 
-        <!-- Import: Material design icons -->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Import: Material design icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        <!-- Import: Materialize css -->
-        <link href=".\include\materialize\css\materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <!-- Import: Materialize css -->
+    <link href=".\include\materialize\css\materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-        <!-- Import: JQuery -->
-        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <!-- Import: JQuery -->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-        <!-- Import: Materialize javascript -->
-        <script src=".\include\materialize\js\materialize.js"></script>
+    <!-- Import: Materialize javascript -->
+    <script src=".\include\materialize\js\materialize.js"></script>
 
-        <!-- Import: Custom css -->
-        <link href=".\style\custom.css" type="text/css" rel="stylesheet"/>
-    </head>
+    <!-- Import: Custom css -->
+    <link href=".\style\custom.css" type="text/css" rel="stylesheet"/>
 
-    <body>
-        
-    </body>
+    <script>
+    $( document ).ready(function(){
+        $(".button-collapse").sideNav();
+    });
+
+    $(document).ready(function(){
+        $('.parallax').parallax();
+    });
+    </script>
+</head>
+
+<body>
+    <!-- Top side navigation bar -->
+    <nav>
+        <div class="nav-wrapper light-blue lighten-1 navbar-fixed">
+            <a class="brand-logo center">EmmeDomotica</a>
+            <a href="#" class="button-collapse" data-activates="mobile-collapse" data-sidenav="left" data-menuwidth="250" data-closeonclick="true"><i class="material-icons">menu</i></a>
+
+            <!-- Desktop and tablet full size navbar -->
+            <ul class="left hide-on-med-and-down">
+                <li><a href="#devices">Dispositivi</a></li>
+                <li><a href="#camera">Camera</a></li>
+            </ul>
+            <!-- Opposite side logout button -->
+            <a href="#logout" id="logout_button" class="right hide-on-med-and-down">Logout</a>
+
+            <!-- Mobile side navbar -->
+            <ul class="side-nav" id="mobile-collapse">
+                <li><a href="#devices">Dispositivi</a></li>
+                <li><a href="#camera">Camera</a></li>
+                <li><a href="#logout">Logout</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="parallax-container">
+        <div class="parallax"><img src=".\images\parallax.jpg"></div>
+    </div>
+
+    <main>
+
+    </main>
+
+    <div class="parallax-container">
+        <div class="parallax"><img src=".\images\parallax.jpg"></div>
+    </div>
+
+
+    <footer class="page-footer light-blue lighten-1">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">EmmeDomotica</h5>
+                    <p class="grey-text text-lighten-4">Gestisce dispositivi Arduino o Raspberry connessi ad un server rest con un interfaccia web.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Twitter</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2017 Copyleft
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
