Created database EmmeDomoticadb

--- a/UserInterface/index.html
+++ b/UserInterface/index.html
@@ -62,85 +62,92 @@
 
     <main class="container-fluid">
         <section class="row">
-            <div class="card medium col l4 s12 m6">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src=".\images\led.png">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Light LED<i class="material-icons right">more_vert</i></span>
-                    <div class="switch">
-                        <label>
-                            Off
-                            <input type="checkbox">
-                            <span class="lever"></span>
-                            On
-                        </label>
+            <div class="border-transparent col l4 s12 m6">
+                <div class="card medium">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src=".\images\led.png">
                     </div>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Lampadina<i class="material-icons right">close</i></span>
-                    <p>
-                        <ul>
-                            <li>Mac address</li>
-                            <li>Status</li>
-                        </ul>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Light LED<i class="material-icons right">more_vert</i></span>
+                        <div class="switch">
+                            <label>
+                                Off
+                                <input type="checkbox">
+                                <span class="lever"></span>
+                                On
+                            </label>
+                        </div>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Lampadina<i class="material-icons right">close</i></span>
+                        <p>
+                            <ul>
+                                <li>Mac address</li>
+                                <li>Status</li>
+                            </ul>
 
-                        <input type="color"  value="#ff0000" />
-                    </p>
+                            <input type="color"  value="#ff0000" />
+                        </p>
+                    </div>
                 </div>
             </div>
 
-            <div class="card medium col l4 s12 m6">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src=".\images\door.jpg">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Porta<i class="material-icons right">more_vert</i></span>
-                    <div class="switch">
-                        <label>
-                            Closed
-                            <input type="checkbox">
-                            <span class="lever"></span>
-                            Open
-                        </label>
+            <div class="border-transparent col l4 s12 m6">
+                <div class="card medium">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src=".\images\door.jpg">
                     </div>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Porta<i class="material-icons right">close</i></span>
-                    <p>
-                        <ul>
-                            <li>Mac address</li>
-                            <li>Status</li>
-                        </ul>
-                    </p>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Porta<i class="material-icons right">more_vert</i></span>
+                        <div class="switch">
+                            <label>
+                                Closed
+                                <input type="checkbox">
+                                <span class="lever"></span>
+                                Open
+                            </label>
+                        </div>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Porta<i class="material-icons right">close</i></span>
+                        <p>
+                            <ul>
+                                <li>Mac address</li>
+                                <li>Status</li>
+                            </ul>
+                        </p>
+                    </div>
                 </div>
             </div>
 
-            <div class="card medium col l4 s12 m6">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src=".\images\bulb.jpg">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Luce<i class="material-icons right">more_vert</i></span>
-                    <div class="switch">
-                        <label>
-                            Off
-                            <input type="checkbox">
-                            <span class="lever"></span>
-                            On
-                        </label>
+            <div class="border-transparent col l4 s12 m6">
+                <div class="card medium">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src=".\images\bulb.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Luce<i class="material-icons right">more_vert</i></span>
+                        <div class="switch">
+                            <label>
+                                Off
+                                <input type="checkbox">
+                                <span class="lever"></span>
+                                On
+                            </label>
+                        </div>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Luce<i class="material-icons right">close</i></span>
+                        <p>
+                            <ul>
+                                <li>Mac address</li>
+                                <li>Status</li>
+                            </ul>
+                        </p>
                     </div>
                 </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Luce<i class="material-icons right">close</i></span>
-                    <p>
-                        <ul>
-                            <li>Mac address</li>
-                            <li>Status</li>
-                        </ul>
-                    </p>
-                </div>
             </div>
+
         </section>
     </main>
 
